--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.1.2",
+    "babel-plugin-import": "^1.13.0",
+    "less": "^3.11.1",
+    "less-vars-to-js": "^1.3.0",
     "next": "9.3.4",
+    "null-loader": "^3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@zeit/next-less": "^1.0.1"
   }
 }
